# trade_system_modules

./: .editorconfig  .env.example  LICENSE  README.md  README_vm.md  download_stocks.sh  polygon_stocks_downloader.py  populate_code(1).sh  populate_code_debug.sh  populate_gcs_efficient.sh  pyproject.toml  requirements.txt  test_polygon_download.py  test_smoke.parquet  test_stocks_download.py
.github/workflows/: release.yml
cookiecutter-strategy/{{cookiecutter.project_slug}}/: .env.example  pyproject.toml
cookiecutter-strategy/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_slug}}/: backtest.py  run_live.py  signals.py
docs/: README.md  api-reference.md  configuration.md  data-adapters.md  development.md  execution.md  installation.md  storage.md  troubleshooting.md
docs/examples/: basic_data.py  storage_example.py
scripts/: smoke_local.py
src/trade_system_modules/: __init__.py
src/trade_system_modules/config/: settings.py
src/trade_system_modules/data/: ibkr_live.py  polygon_adapter.py  symbology.py
src/trade_system_modules/execution/: ibkr_exec.py
src/trade_system_modules/schemas/: bars.py
src/trade_system_modules/storage/: gcs.py  paths.py
src/trade_system_modules/utils/: time.py
tests/: test_gcs_unit.py  test_polygon_adapter_unit.py  test_public_api.py  test_schemas.py  test_symbology.py
